Change use of isBlank method for String class